test/all_output.txt
javac output ------------
Test.java:9: incompatible types
found   : java.lang.String
required: int
		int a = "xxx";
		        ^
Test.java:10: incompatible types
found   : int
required: java.lang.String
		String str = 45;
		             ^
Test.java:11: non-static method go() cannot be referenced from a static context
		go();
		^
3 errors

gcc output ------------
test.c: In function ‘main’:
test.c:10: error: request for member ‘x’ in something not a structure or union
test.c:11: warning: initialization makes integer from pointer without a cast

python output -------------

Traceback (most recent call last):
  File "test.py", line 10, in <module>
    err()
  File "test.py", line 7, in err
    real_err()
  File "test.py", line 4, in real_err
    int('xxx')
ValueError: invalid literal for int() with base 10: 'xxx'

valac output ---------------

Test.vala:9.9-9.23: error: Return: Cannot convert from `string' to `int'
        return "error";
        ^^^^^^^^^^^^^^^
Test.vala:13.9-13.9: error: The name `c' does not exist in the context of `Test.HelloObject.main'
        c();
        ^
Test.vala:14.13-14.21: error: Assignment: Cannot convert from `string' to `int'
        int a = "xxx";
            ^^^^^^^^^
Compilation failed: 3 error(s), 0 warning(s)
